--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -2,10 +2,10 @@
 
 .menu {
   padding: 0 20px;
-  border-bottom: solid 1px #e8e8e8;
+  /* border-bottom: solid 1px #e8e8e8; */
   overflow: auto;
-  box-shadow: 0 0 30px #f3f1f1;
-  background-color: white;
+  /* box-shadow: 0 0 30px #f3f1f1; */
+  /* background-color: white; */
 }
 
 .menu__logo {
@@ -50,7 +50,7 @@
   padding: 6px;
   margin-top: 8px;
   display: none !important; /* use of important to overwrite ant-btn */
-  background: #3e91f7;
+  background: #f73e3e;
 }
 
 .menu_drawer .ant-drawer-body {
