--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -1,22 +1,22 @@
 @import '~antd/dist/antd.css';
 
 .menu {
-  padding: 0 20px;
+  padding: 0 0px;
   /* border-bottom: solid 1px #e8e8e8; */
   overflow: auto;
   /* box-shadow: 0 0 30px #f3f1f1; */
-  /* background-color: white; */
+  background-color: white;
 }
 
 .menu__logo {
-  width: 150px;
+  width: 15px;
   float: left;
 }
 
 .menu__logo a {
   display: inline-block;
-  font-size: 20px;
-  padding: 19px 20px;
+  font-size: 10px;
+  padding: 19px 0px;
 }
 
 .menu__container .ant-menu-item {
@@ -24,12 +24,12 @@
 }
 
 .menu__container .ant-menu-submenu-title {
-  padding: 10px 20px;
+  padding: 10px 10px;
 }
 
 .menu__container .ant-menu-item a,
 .menu__container .ant-menu-submenu-title a {
-  padding: 10px 15px;
+  padding: 10px 5px;
 }
 
 .menu__container .ant-menu-horizontal {
