--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -9,7 +9,6 @@
 }
 
 .menu__logo {
-  width: 15px;
   float: left;
 }
 
@@ -19,9 +18,9 @@
   padding: 19px 0px;
 }
 
-.menu__container .ant-menu-item {
+/* .menu__container .ant-menu-item {
   padding: 0px 5px;
-}
+} */
 
 .menu__container .ant-menu-submenu-title {
   padding: 10px 10px;
@@ -73,7 +72,7 @@
   }
 
   .menu__logo a {
-    margin-left: -20px;
+    margin-left: 0px;
   }
 
   .menu__container .ant-menu-item,
