--- a/client/src/components/views/DetailProjectPage/Sections/ProjectImage.css
+++ b/client/src/components/views/DetailProjectPage/Sections/ProjectImage.css
@@ -1,7 +1,7 @@
 .viewProjectContainer {
-  margin-left: "4rem";
-  margin-top: "-21rem";
-  margin-bottom: "15rem";
+  margin-left: "4rem !important";
+  margin-top: "-21rem !important";
+  margin-bottom: "15rem !important";
 }
 
 .image-gallery {
