--- a/client/src/components/utils/styles/FileUploadStyles.css
+++ b/client/src/components/utils/styles/FileUploadStyles.css
@@ -20,9 +20,11 @@
 }
 
 img {
-  min-width: 300px;
-  width: 300px;
-  height: 240px;
+  /*min-width: 300px;*/ /* This setting was stretching each photo to min width 300px */
+  /* width: 300px; */
+  /*height: 240px; */
+  height: 194px;
+  width: auto !important;
 }
 
 #icon{
