--- a/client/src/index.css
+++ b/client/src/index.css
@@ -174,40 +174,37 @@ header {
 }
 
 
-/* Work Experience
+/* Category CheckBox
 ------------------------------------*/
-.work-experience {
-  background: #A1C6D7;
+.checkboxStyles{
+  padding: 10px;
+    /* border-bottom: 1px solid #f5f5f5; */
+}
+
+.checkboxStyles label{
+  padding-right: 6px;
 }
 
 
 
-/* Education
+/* Card Styles
 ------------------------------------*/
-.education {
-  background-size: cover;
-  background-position: top right;
-  padding-bottom: 100px;
-}
-.education p {
-  width: 60%;
+.cardStyles{
+  box-shadow: 0px 2px 6px #e8e8e8;
 }
 
+.ant-card-hoverable:hover {
+  box-shadow: 0 0px 20px rgb(0 0 0 / 9%) !important;
+}
 
-/* Contact Info
+.dateStyles{
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 4px 8px;
+}
+
+/* Details Page
 ------------------------------------*/
-footer {
-  background: #343434;
-  color: #F7FFF7;
-}
-.contact-list {
-  list-style-type: none;
-  padding: 0;
-}
-.contact-list a {
-  padding: 15px;
-  display: inline-block;
-}
 
 
 /* Responsive
@@ -232,18 +229,10 @@ footer {
   }
 }
 
-@media screen and (max-width:749px){
-  h1 {
-    font-size: 75px;
-    line-height: 0.9;
-    margin-bottom: 20px;
-  }
-  h2 {
-    line-height: 1;
-  }
-  .contact-list a {
-    padding: 5px;
-  }
+@media screen and (max-width:576px){
+ .categorySelector .ant-collapse{
+   position: relative !important;
+ }
 }
 
 
