modified:   client/src/components/views/DetailProjectPage/Sections/ProjectImage.js modified:   client/src/components/views/DetailProjectPage/Sections/ProjectInfo.js modified:   client/src/components/views/LandingPage/LandingPage.js modified:   client/src/index.css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -205,7 +205,9 @@ header {
 
 /* Details Page
 ------------------------------------*/
-
+.projectInfoStyles > div{
+  margin-bottom: 32px;
+}
 
 /* Responsive
 ------------------------------------*/
